--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -60,7 +60,7 @@
 	</div>
 </footer>
 
-<footer id="footer-bot" class="footer-bot">
+<!-- <footer id="footer-bot" class="footer-bot">
 	<div class='_container'>
 		<div class="footer-bot__row d-flex">
 
@@ -76,4 +76,4 @@
 
 		</div>
 	</div>
-</footer>
+</footer> -->
