--- a/#src/index.html
+++ b/#src/index.html
@@ -314,7 +314,7 @@
 				</div>
 			</section>
 
-			<section id="logist" class="logist">
+			<!-- <section id="logist" class="logist">
 				<div class="_container">
 					<div class="logist__row d-flex">
 
@@ -354,9 +354,9 @@
 						</div>
 					</div>
 				</div>
-			</section>
+			</section> -->
 
-			<section id="advant" class="advant">
+			<!-- <section id="advant" class="advant">
 				<div class="_container">
 					<div class="advant__row d-flex">
 
@@ -422,9 +422,9 @@
 
 					</div>
 				</div>
-			</section>
+			</section> -->
 
-			<section id="brands" class="brands">
+			<!-- <section id="brands" class="brands">
 				<div class="_container">
 					<h2>Только лучшие бренды</h2>
 
@@ -460,7 +460,7 @@
 
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 		</main>
 		@@include('_footer.html',{})
