--- a/light_market-new/catalog.html
+++ b/light_market-new/catalog.html
@@ -20,17 +20,28 @@
 
 <body>
 	<div class="wrapper">
-		<header id="header-top" class="header-top">
+		<section class="sale">
+	<div class="sale__descp">
+
+	</div>
+</section>
+
+<header id="header-top" class="header-top">
 	<div class="_container">
-		<ul>
-			<li><a href="#">Акции</a></li>
-			<li><a href="#">Помощь</a></li>
-			<li><a href="#">Оплата</a></li>
-			<li><a href="#">Доставка</a></li>
-			<li><a href="#">О компании</a></li>
-			<li><a href="#">Бренды</a></li>
-			<li><a href="#">Контакты</a></li>
-		</ul>
+		<div class="header-top__inner">
+			<div class="location-block d-flex">
+				<a href="#" class="location-block__link location-block__link_01">Курск</a>
+				<a href="#" class="location-block__link location-block__link_02">Доставка</a>
+			</div>
+			<ul>
+				<li><a href="#">Акции</a></li>
+				<li><a href="#">Помощь</a></li>
+				<li><a href="#">Оплата</a></li>
+				<li><a href="#">О компании</a></li>
+				<li><a href="#">Бренды</a></li>
+				<li><a href="#">Контакты</a></li>
+			</ul>
+		</div>
 	</div>
 </header>
 
@@ -40,28 +51,31 @@
 		<div class="header__row-top d-flex">
 			<a href="#" class="header__logo logo-icon"></a>
 
+			<div class="header__middle d-flex">
+				<div class="header__search search">
+					<input type="text" placeholder="Поиск по сайту" class="search__input input">
+					<button type="submit" tabindex="2" id="searchsubmit" class="sub-search search__btn" value=""></button>
+				</div>
+				<button class="mob-search"></button>
+
+				<div class="header__callback callback d-flex">
+					<p><a href="tel:88007006045" class="callback__phone">8 (800) 700-60-45</a></p>
+					<a href="#callback" class="callback__popup _popup-link">Заказать обратный звонок</a>
+				</div>
+
+				<a href="#" class="header__bascket">Избранное</a>
+				<a href="#" class="header__bascket">Корзина</a>
+
+			</div>
+
 			<div class="menu__icon icon-menu">
 				<span></span>
 				<span></span>
 				<span></span>
 			</div>
 
-			<div class="header__middle d-flex">
-				<div class="header__callback callback d-flex">
-					<p><a href="tel:88007006045" class="callback__phone">8 (800) 700-60-45</a></p>
-					<a href="#" class="callback__popup">Заказать обратный звонок</a>
-				</div>
-
-				<div class="header__search search">
-					<input type="text" placeholder="Поиск по сайту" class="search__input input">
-					<button type="submit" tabindex="2" id="searchsubmit" class="sub-search" value=""></button>
-				</div>
-				<button class="mob-search"></button>
-
-				<a href="#" class="header__bascket">Корзина</a>
-
-			</div>
 		</div>
+
 	</div>
 </header>
 
@@ -245,7 +259,7 @@
 	</div>
 </footer>
 
-<footer id="footer-bot" class="footer-bot">
+<!-- <footer id="footer-bot" class="footer-bot">
 	<div class='_container'>
 		<div class="footer-bot__row d-flex">
 
@@ -261,7 +275,7 @@
 
 		</div>
 	</div>
-</footer>
+</footer> -->
 	</div>
 	<!-- Popup-с формой -->
 <div class="popup popup_callback">
