Сверстал текстовый блок

--- a/#src/_header.html
+++ b/#src/_header.html
@@ -41,7 +41,7 @@
 					<a href="#callback" class="callback__popup _popup-link">Заказать обратный звонок</a>
 				</div>
 
-				<a href="#" class="header__bascket">Избранное</a>
+				<a href="#" class="header__favorites">Избранное</a>
 				<a href="#" class="header__bascket">Корзина</a>
 
 			</div>
@@ -61,20 +61,18 @@
 	<div class="_container">
 
 		<div class="header__menu menu">
-			<nav class="menu__body">
-				<ul class="menu__list d-flex">
-					<li class="menu__catalogy"><a href="#" class="menu__link">Каталог товаров</a></li>
-					<li><a href="#" class="menu__link">Люстры</a></li>
-					<li><a href="#" class="menu__link">Светильники</a></li>
-					<li><a href="#" class="menu__link">Бра</a></li>
-					<li><a href="#" class="menu__link">Настольные лампы</a></li>
-					<li><a href="#" class="menu__link">Споты</a></li>
-					<li><a href="#" class="menu__link">Торшеры</a></li>
-					<li><a href="#" class="menu__link">Уличное освещение</a></li>
-					<li><a href="#" class="menu__link">Электротовары</a></li>
-					<li class="menu__shares"><a href="#" class="menu__link">Акции</a></li>
-				</ul>
-			</nav>
+			<ul class="menu__list d-flex">
+				<li class="menu__catalogy"><a href="#" class="menu__link">Каталог товаров</a></li>
+				<li><a href="#" class="menu__link">Люстры</a></li>
+				<li><a href="#" class="menu__link">Светильники</a></li>
+				<li><a href="#" class="menu__link">Бра</a></li>
+				<li><a href="#" class="menu__link">Настольные лампы</a></li>
+				<li><a href="#" class="menu__link">Споты</a></li>
+				<li><a href="#" class="menu__link">Торшеры</a></li>
+				<li><a href="#" class="menu__link">Уличное освещение</a></li>
+				<li><a href="#" class="menu__link">Электротовары</a></li>
+				<li class="menu__shares"><a href="#" class="menu__link">Акции</a></li>
+			</ul>
 
 			<nav class="mob-menu">
 				<div class="mob-menu__df d-flex">
