--- a/light_market-new/index.html
+++ b/light_market-new/index.html
@@ -63,7 +63,7 @@
 					<a href="#callback" class="callback__popup _popup-link">Заказать обратный звонок</a>
 				</div>
 
-				<a href="#" class="header__bascket">Избранное</a>
+				<a href="#" class="header__favorites">Избранное</a>
 				<a href="#" class="header__bascket">Корзина</a>
 
 			</div>
@@ -83,20 +83,18 @@
 	<div class="_container">
 
 		<div class="header__menu menu">
-			<nav class="menu__body">
-				<ul class="menu__list d-flex">
-					<li class="menu__catalogy"><a href="#" class="menu__link">Каталог товаров</a></li>
-					<li><a href="#" class="menu__link">Люстры</a></li>
-					<li><a href="#" class="menu__link">Светильники</a></li>
-					<li><a href="#" class="menu__link">Бра</a></li>
-					<li><a href="#" class="menu__link">Настольные лампы</a></li>
-					<li><a href="#" class="menu__link">Споты</a></li>
-					<li><a href="#" class="menu__link">Торшеры</a></li>
-					<li><a href="#" class="menu__link">Уличное освещение</a></li>
-					<li><a href="#" class="menu__link">Электротовары</a></li>
-					<li class="menu__shares"><a href="#" class="menu__link">Акции</a></li>
-				</ul>
-			</nav>
+			<ul class="menu__list d-flex">
+				<li class="menu__catalogy"><a href="#" class="menu__link">Каталог товаров</a></li>
+				<li><a href="#" class="menu__link">Люстры</a></li>
+				<li><a href="#" class="menu__link">Светильники</a></li>
+				<li><a href="#" class="menu__link">Бра</a></li>
+				<li><a href="#" class="menu__link">Настольные лампы</a></li>
+				<li><a href="#" class="menu__link">Споты</a></li>
+				<li><a href="#" class="menu__link">Торшеры</a></li>
+				<li><a href="#" class="menu__link">Уличное освещение</a></li>
+				<li><a href="#" class="menu__link">Электротовары</a></li>
+				<li class="menu__shares"><a href="#" class="menu__link">Акции</a></li>
+			</ul>
 
 			<nav class="mob-menu">
 				<div class="mob-menu__df d-flex">
@@ -305,12 +303,12 @@
 					</div>
 
 					<div class="popular__baner">
-						<div class="popular__baner-text">
+						<!-- <div class="popular__baner-text">
 							<h2>ПРЕИМУЩЕСТВА <br>
 								В СТИЛЕ <span>VELE LUCE</span>
 							</h2>
 							<a href="#" class="btn">Смотреть</a>
-						</div>
+						</div> -->
 					</div>
 
 				</div>
@@ -318,7 +316,7 @@
 
 			<section id="new-items" class="new-items">
 				<div class="_container">
-					<h2>Новинки</h2>
+					<h2>Распродажа</h2>
 
 					<div class="prod-card d-flex">
 
@@ -427,6 +425,59 @@
 							</div>
 						</div>
 
+					</div>
+
+				</div>
+			</section>
+
+			<section id="about" class="about">
+				<div class="_container">
+					<h2 class="about__title title">ИНТЕРНЕТ-МАГАЗИН СВЕТИЛЬНИКОВ И ЛЮСТР «МАРКЕТСВЕТА»</h2>
+
+					<div class="about__inner">
+						<div class="about__column">
+							<p class="about__column-text">
+								Наш ассортимент осветительных приборов — это более 120 брендов, среди которых: потолочные, встраиваемые,
+								подвесные и трековые светильники. Есть роскошные хрустальные, лаконичные металлические, натуральные
+								деревянные, воздушные стеклянные — любые модели, которые только можно представить.
+							</p>
+							<p class="about__column-text">
+								Наш каталог постоянно пополняется новинками — как только у представленного бренда выходит новая
+								коллекция,
+								она сразу появляется в продаже у нас. Среди представленных марок — самые популярные бренды Италии,
+								Германии, Испании, Австрии, Бельгии, Чехии, Польши, Дании, Швеции, Франции, Турции, США, Китая и,
+								конечно,
+								России.
+							</p>
+							<p class="about__column-text">
+								Кроме регулярного обновления и пополнения ассортимента осветительных приборов, мы постоянно проводим
+								акции
+								— распродажи светильников и люстр со значительными скидками — порой они достигают 90%!
+							</p>
+						</div>
+
+						<div class="about__column">
+							<p class="about__column-text">
+								Это отличная возможность дополнить свой интерьер настольной лампой или торшером, купить люстру, выбрать
+								подарок или полностью обновить свет во всем доме.
+							</p>
+							<p class="about__column-text">
+								«МаркетСвета» — это простые лаконичные модели и эксклюзивные дизайнерские люстры из хрусталя, достойные
+								самых роскошных интерьеров.
+							</p>
+							<p class="about__column-text">
+								Наша служба доставки быстро и аккуратно привезет заказанные товары, а установкой осветительной техники
+								займутся специалисты службы монтажа. Кстати, если воспользоваться услугами наших специалистов,
+								гарантийный
+								срок на оборудование увеличивается до 2 лет! Так что лучше доверить работу профессионалам, которые
+								сделают
+								всё быстро и качественно — в квартире, доме или офисе.
+							</p>
+							<p class="about__column-text">
+								Если у вас остались вопросы, свяжитесь с менеджерами интернет-магазина люстр и светильников «ВамСвет» по
+								телефону 8 (495) 154-10-63 или закажите обратный звонок, оставив контактные данные.
+							</p>
+						</div>
 					</div>
 
 				</div>
