--- a/light_market-new/index.html
+++ b/light_market-new/index.html
@@ -191,7 +191,7 @@
 
 			<section id="popular" class="popular">
 				<div class="_container">
-					<h2>Популярные товары</h2>
+					<h2 class="popular__title title">Популярные товары</h2>
 
 					<div class="popular__row prod-card d-flex">
 
@@ -316,7 +316,7 @@
 
 			<section id="new-items" class="new-items">
 				<div class="_container">
-					<h2>Распродажа</h2>
+					<h2 class="new-items__title title">Распродажа</h2>
 
 					<div class="prod-card d-flex">
 
