--- a/light_market-new/index.html
+++ b/light_market-new/index.html
@@ -193,112 +193,7 @@
 				<div class="_container">
 					<h2 class="popular__title title">Популярные товары</h2>
 
-					<div class="popular__row prod-card d-flex">
-
-						<div class="prod-card__body d-flex">
-							<!-- <span class="prod-card__sale">-40%</span> -->
-							<a href="#" class="prod-card__link">
-								<img src="img/product/pr-01.jpg" alt="">
-							</a>
-
-							<div class="prod-card__text">
-								<a href="#">
-									<h4>Подвесной светильник
-										Lightstar Escica 806010
-									</h4>
-								</a>
-								<p class="prod-card__manuf">Lightstar (ИТАЛИЯ)</p>
-								<p class="prod-card__avail">В наличии</p>
-							</div>
-							<div class="prod-card__price-item d-flex">
-								<p class="prod-card__price rub">6 463 </p>
-								<a href="#" class="btn">В корзину</a>
-							</div>
-						</div>
-
-						<div class="prod-card__body d-flex">
-							<span class="prod-card__sale">-40%</span>
-							<a href="#" class="prod-card__link">
-								<img src="img/product/pr-02.jpg" alt="">
-							</a>
-
-							<div class="prod-card__text">
-								<a href="#">
-									<h4>Подвесной светильник
-										Lightstar Escica 806010
-									</h4>
-								</a>
-								<p class="prod-card__manuf">Lightstar (ИТАЛИЯ)</p>
-								<p class="prod-card__avail">В наличии</p>
-							</div>
-							<div class="prod-card__price-item d-flex">
-								<p class="prod-card__price rub">6 463 </p>
-								<a href="#" class="btn">В корзину</a>
-							</div>
-						</div>
-
-						<div class="prod-card__body d-flex">
-							<!-- <span class="prod-card__sale">-40%</span> -->
-							<a href="#" class="prod-card__link">
-								<img src="img/product/pr-03.jpg" alt="">
-							</a>
-
-							<div class="prod-card__text">
-								<a href="#">
-									<h4>Подвесной светильник
-										Lightstar Escica 806010
-									</h4>
-								</a>
-								<p class="prod-card__manuf">Lightstar (ИТАЛИЯ)</p>
-								<p class="prod-card__avail">В наличии</p>
-							</div>
-							<div class="prod-card__price-item d-flex">
-								<p class="prod-card__price rub">6 463 </p>
-								<a href="#" class="btn">В корзину</a>
-							</div>
-						</div>
-
-						<div class="prod-card__body d-flex">
-							<span class="prod-card__sale">-20%</span>
-							<a href="#" class="prod-card__link">
-								<img src="img/product/pr-04.jpg" alt="">
-							</a>
-
-							<div class="prod-card__text">
-								<a href="#">
-									<h4>Подвесной светильник
-										Lightstar Escica 806010
-									</h4>
-								</a>
-								<p class="prod-card__manuf">Lightstar (ИТАЛИЯ)</p>
-								<p class="prod-card__avail">В наличии</p>
-							</div>
-							<div class="prod-card__price-item d-flex">
-								<p class="prod-card__price rub">6 463 </p>
-								<a href="#" class="btn">В корзину</a>
-							</div>
-						</div>
-
-						<div class="prod-card__body d-flex">
-							<!-- <span class="prod-card__sale">-40%</span> -->
-							<a href="#" class="prod-card__link">
-								<img src="img/product/pr-05.jpg" alt="">
-							</a>
-
-							<div class="prod-card__text">
-								<a href="#">
-									<h4>Подвесной светильник
-										Lightstar Escica 806010
-									</h4>
-								</a>
-								<p class="prod-card__manuf">Lightstar (ИТАЛИЯ)</p>
-								<p class="prod-card__avail">В наличии</p>
-							</div>
-							<div class="prod-card__price-item d-flex">
-								<p class="prod-card__price rub">6 463 </p>
-								<a href="#" class="btn">В корзину</a>
-							</div>
-						</div>
+					<div class="popular__row">
 
 					</div>
 
