--- a/light_market-new/index.html
+++ b/light_market-new/index.html
@@ -195,6 +195,90 @@
 
 					<div class="popular__row">
 
+						<div class="popular__column">
+							<a href="#" class="circleCard">
+								<div class="circleCard__img">
+									<div class="circleCard__img-nuar_blk nuar_blk"></div>
+									<img src="img/popular/01.png" alt="">
+								</div>
+								<div class="circleCard__name">
+									Люстры
+								</div>
+							</a>
+						</div>
+
+						<div class="popular__column">
+							<a href="#" class="circleCard">
+								<div class="circleCard__img">
+									<div class="circleCard__img-nuar_blk nuar_blk"></div>
+									<img src="img/popular/02.png" alt="">
+								</div>
+								<div class="circleCard__name">
+									Светильники
+								</div>
+							</a>
+						</div>
+
+						<div class="popular__column">
+							<a href="#" class="circleCard">
+								<div class="circleCard__img">
+									<div class="circleCard__img-nuar_blk nuar_blk"></div>
+									<img src="img/popular/03.png" alt="">
+								</div>
+								<div class="circleCard__name">
+									Бра
+								</div>
+							</a>
+						</div>
+
+						<div class="popular__column">
+							<a href="#" class="circleCard">
+								<div class="circleCard__img">
+									<div class="circleCard__img-nuar_blk nuar_blk"></div>
+									<img src="img/popular/04.png" alt="">
+								</div>
+								<div class="circleCard__name">
+									Настольные лампы
+								</div>
+							</a>
+						</div>
+
+						<div class="popular__column">
+							<a href="#" class="circleCard">
+								<div class="circleCard__img">
+									<div class="circleCard__img-nuar_blk nuar_blk"></div>
+									<img src="img/popular/05.png" alt="">
+								</div>
+								<div class="circleCard__name">
+									Торшеры
+								</div>
+							</a>
+						</div>
+
+						<div class="popular__column">
+							<a href="#" class="circleCard">
+								<div class="circleCard__img">
+									<div class="circleCard__img-nuar_blk nuar_blk"></div>
+									<img src="img/popular/06.png" alt="">
+								</div>
+								<div class="circleCard__name">
+									Люстры
+								</div>
+							</a>
+						</div>
+
+						<div class="popular__column">
+							<a href="#" class="circleCard">
+								<div class="circleCard__img">
+									<div class="circleCard__img-nuar_blk nuar_blk"></div>
+									<img src="img/popular/07.png" alt="">
+								</div>
+								<div class="circleCard__name">
+									Уличное освещение
+								</div>
+							</a>
+						</div>
+
 					</div>
 
 					<div class="popular__baner">
