Еще одна секция

--- a/light_market-new/index.html
+++ b/light_market-new/index.html
@@ -293,6 +293,57 @@
 				</div>
 			</section>
 
+			<section id="selection" class="selection">
+				<div class="_container">
+					<h2 class="selection__title title">ПОДБЕРИТЕ СВЕТИЛЬНИКИ ПО ТИПУ ПОМЕЩЕНИЯ</h2>
+
+					<div class="selection__row d-flex">
+
+						<div class="selection__column">
+							<div class="cardType cardType_img-01">
+								<div class="cardType__color-block">
+									<p class="cardType__color-block-text">Спальня</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="selection__column">
+							<div class="cardType cardType_img-02">
+								<div class="cardType__color-block">
+									<p class="cardType__color-block-text">КУХНЯ</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="selection__column">
+							<div class="cardType cardType_img-03">
+								<div class="cardType__color-block">
+									<p class="cardType__color-block-text">ГОСТИННАЯ</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="selection__column">
+							<div class="cardType cardType_img-04">
+								<div class="cardType__color-block">
+									<p class="cardType__color-block-text">ДЕТСКАЯ</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="selection__column">
+							<div class="cardType cardType_img-05">
+								<div class="cardType__color-block">
+									<p class="cardType__color-block-text">ВАННАЯ</p>
+								</div>
+							</div>
+						</div>
+
+					</div>
+
+				</div>
+			</section>
+
 			<section id="new-items" class="new-items">
 				<div class="_container">
 					<h2 class="new-items__title title">Распродажа</h2>
