--- a/light_market-new/index.html
+++ b/light_market-new/index.html
@@ -300,43 +300,43 @@
 					<div class="selection__row d-flex">
 
 						<div class="selection__column">
-							<div class="cardType cardType_img-01">
+							<a href="#" class="cardType cardType_img-01">
 								<div class="cardType__color-block">
 									<p class="cardType__color-block-text">Спальня</p>
 								</div>
-							</div>
+							</a>
 						</div>
 
 						<div class="selection__column">
-							<div class="cardType cardType_img-02">
+							<a href="#" class="cardType cardType_img-02">
 								<div class="cardType__color-block">
 									<p class="cardType__color-block-text">КУХНЯ</p>
 								</div>
-							</div>
+							</a>
 						</div>
 
 						<div class="selection__column">
-							<div class="cardType cardType_img-03">
+							<a href="#" class="cardType cardType_img-03">
 								<div class="cardType__color-block">
 									<p class="cardType__color-block-text">ГОСТИННАЯ</p>
 								</div>
-							</div>
+							</a>
 						</div>
 
 						<div class="selection__column">
-							<div class="cardType cardType_img-04">
+							<a href="#" class="cardType cardType_img-04">
 								<div class="cardType__color-block">
 									<p class="cardType__color-block-text">ДЕТСКАЯ</p>
 								</div>
-							</div>
+							</a>
 						</div>
 
 						<div class="selection__column">
-							<div class="cardType cardType_img-05">
+							<a href="#" class="cardType cardType_img-05">
 								<div class="cardType__color-block">
 									<p class="cardType__color-block-text">ВАННАЯ</p>
 								</div>
-							</div>
+							</a>
 						</div>
 
 					</div>
@@ -350,108 +350,88 @@
 
 					<div class="prod-card d-flex">
 
-						<div class="prod-card__body d-flex">
-							<span class="prod-card__sale new-sale">NEW</span>
-							<a href="#" class="prod-card__link">
-								<img src="img/product/pr-06.jpg" alt="">
-							</a>
+						<div class="sale-baner">
+							<img src="img/sale-baner.jpg" alt="">
+						</div>
 
-							<div class="prod-card__text">
-								<a href="#">
-									<h4>Подвесной светильник
-										Lightstar Escica 806010
-									</h4>
+						<div class="prod-card__column">
+							<div class="prod-card__body d-flex">
+								<a href="#" class="prod-card__favorites-icon favorites-icon"></a>
+								<a href="#" class="prod-card__img">
+									<img src="img/product/pr-08.jpg" alt="">
 								</a>
-								<p class="prod-card__manuf">Lightstar (ИТАЛИЯ)</p>
-								<p class="prod-card__avail">В наличии</p>
-							</div>
-							<div class="prod-card__price-item d-flex">
-								<p class="prod-card__price rub">6 463 </p>
-								<a href="#" class="btn">В корзину</a>
+								<div class="prod-card__text">
+									<div class="prod-card__text-sale">Акция</div>
+									<h4 class="prod-card__text-title">
+										Подвесной светильник Lightstar Escica 806010
+									</h4>
+									<div class="prod-card__inner d-flex">
+										<p class="prod-card__manuf">Lightstar (ИТАЛИЯ)</p>
+										<p class="prod-card__avail">В наличии</p>
+									</div>
+									<div class="prod-card__old-price-block d-flex">
+										<div class="prod-card__old-price rub">14 520</div>
+										<div class="prod-card__sale-icon">-60%</div>
+									</div>
+								</div>
+								<div class="prod-card__price-item d-flex">
+									<p class="prod-card__price rub">6 463 </p>
+									<a href="#" class="btn">В корзину</a>
+								</div>
 							</div>
 						</div>
 
-						<div class="prod-card__body d-flex">
-							<span class="prod-card__sale new-sale">NEW</span>
-							<a href="#" class="prod-card__link">
-								<img src="img/product/pr-07.jpg" alt="">
-							</a>
-
-							<div class="prod-card__text">
-								<a href="#">
-									<h4>Подвесной светильник
-										Lightstar Escica 806010
-									</h4>
+						<div class="prod-card__column">
+							<div class="prod-card__body d-flex">
+								<a href="#" class="prod-card__favorites-icon favorites-icon"></a>
+								<a href="#" class="prod-card__img">
+									<img src="img/product/pr-08.jpg" alt="">
 								</a>
-								<p class="prod-card__manuf">Lightstar (ИТАЛИЯ)</p>
-								<p class="prod-card__avail">В наличии</p>
-							</div>
-							<div class="prod-card__price-item d-flex">
-								<p class="prod-card__price rub">6 463 </p>
-								<a href="#" class="btn">В корзину</a>
+								<div class="prod-card__text">
+									<div class="prod-card__text-sale">Акция</div>
+									<h4 class="prod-card__text-title">
+										Подвесной светильник Lightstar Escica 806010
+									</h4>
+									<div class="prod-card__inner d-flex">
+										<p class="prod-card__manuf">Lightstar (ИТАЛИЯ)</p>
+										<p class="prod-card__avail">В наличии</p>
+									</div>
+									<div class="prod-card__old-price-block d-flex">
+										<div class="prod-card__old-price rub">14 520</div>
+										<div class="prod-card__sale-icon">-60%</div>
+									</div>
+								</div>
+								<div class="prod-card__price-item d-flex">
+									<p class="prod-card__price rub">6 463 </p>
+									<a href="#" class="btn">В корзину</a>
+								</div>
 							</div>
 						</div>
 
-						<div class="prod-card__body d-flex">
-							<span class="prod-card__sale new-sale">NEW</span>
-							<a href="#" class="prod-card__link">
-								<img src="img/product/pr-08.jpg" alt="">
-							</a>
-
-							<div class="prod-card__text">
-								<a href="#">
-									<h4>Подвесной светильник
-										Lightstar Escica 806010
-									</h4>
+						<div class="prod-card__column">
+							<div class="prod-card__body d-flex">
+								<a href="#" class="prod-card__favorites-icon favorites-icon"></a>
+								<a href="#" class="prod-card__img">
+									<img src="img/product/pr-08.jpg" alt="">
 								</a>
-								<p class="prod-card__manuf">Lightstar (ИТАЛИЯ)</p>
-								<p class="prod-card__avail">В наличии</p>
-							</div>
-							<div class="prod-card__price-item d-flex">
-								<p class="prod-card__price rub">6 463 </p>
-								<a href="#" class="btn">В корзину</a>
-							</div>
-						</div>
-
-						<div class="prod-card__body d-flex">
-							<span class="prod-card__sale new-sale">NEW</span>
-							<a href="#" class="prod-card__link">
-								<img src="img/product/pr-09.jpg" alt="">
-							</a>
-
-							<div class="prod-card__text">
-								<a href="#">
-									<h4>Подвесной светильник
-										Lightstar Escica 806010
+								<div class="prod-card__text">
+									<div class="prod-card__text-sale">Акция</div>
+									<h4 class="prod-card__text-title">
+										Подвесной светильник Lightstar Escica 806010
 									</h4>
-								</a>
-								<p class="prod-card__manuf">Lightstar (ИТАЛИЯ)</p>
-								<p class="prod-card__avail">В наличии</p>
-							</div>
-							<div class="prod-card__price-item d-flex">
-								<p class="prod-card__price rub">6 463 </p>
-								<a href="#" class="btn">В корзину</a>
-							</div>
-						</div>
-
-						<div class="prod-card__body d-flex">
-							<span class="prod-card__sale new-sale">NEW</span>
-							<a href="#" class="prod-card__link">
-								<img src="img/product/pr-10.jpg" alt="">
-							</a>
-
-							<div class="prod-card__text">
-								<a href="#">
-									<h4>Подвесной светильник
-										Lightstar Escica 806010
-									</h4>
-								</a>
-								<p class="prod-card__manuf">Lightstar (ИТАЛИЯ)</p>
-								<p class="prod-card__avail">В наличии</p>
-							</div>
-							<div class="prod-card__price-item d-flex">
-								<p class="prod-card__price rub">6 463 </p>
-								<a href="#" class="btn">В корзину</a>
+									<div class="prod-card__inner d-flex">
+										<p class="prod-card__manuf">Lightstar (ИТАЛИЯ)</p>
+										<p class="prod-card__avail">В наличии</p>
+									</div>
+									<div class="prod-card__old-price-block d-flex">
+										<div class="prod-card__old-price rub">14 520</div>
+										<div class="prod-card__sale-icon">-60%</div>
+									</div>
+								</div>
+								<div class="prod-card__price-item d-flex">
+									<p class="prod-card__price rub">6 463 </p>
+									<a href="#" class="btn">В корзину</a>
+								</div>
 							</div>
 						</div>
 
