--- a/#src/index.html
+++ b/#src/index.html
@@ -11,44 +11,21 @@
 
 			<!-- @@include('_slider-index.html',{}) -->
 
-			<!-- <section id="info-sl" class="info-sl">
+			<section id="info-sl" class="info-sl">
 				<div class="_container">
 					<div class="info-sl__row d-flex">
 
-						<div class="info-sl__slider slider">
+						<div class="info-sl__slider slider _swiper">
 							<div class="slider__item">
 								<img src="img/sl-1.jpg" alt="">
-								<p>НОВИНКИ <br>2021</p>
 							</div>
 
 							<div class="slider__item">
 								<img src="img/sl-1.jpg" alt="">
-								<p>НОВИНКИ <br>2021</p>
 							</div>
 
 							<div class="slider__item filter">
 								<img src="img/sl-1.jpg" alt="">
-								<p>НОВИНКИ <br>2021</p>
-							</div>
-
-							<div class="slider__item">
-								<img src="img/sl-1.jpg" alt="">
-								<p>НОВИНКИ <br>2021</p>
-							</div>
-
-							<div class="slider__item filter">
-								<img src="img/sl-1.jpg" alt="">
-								<p>НОВИНКИ <br>2021</p>
-							</div>
-
-							<div class="slider__item">
-								<img src="img/sl-1.jpg" alt="">
-								<p>НОВИНКИ <br>2021</p>
-							</div>
-
-							<div class="slider__item filter">
-								<img src="img/sl-1.jpg" alt="">
-								<p>НОВИНКИ <br>2021</p>
 							</div>
 						</div>
 
@@ -56,22 +33,22 @@
 
 							<div class="info-sl__img-item img-item-l">
 								<img src="img/info-sl-1.jpg" alt="">
-								<div class="img-l">
+								<!-- <div class="img-l">
 									<p>Светильники <span>до 10 000 рублей</span></p>
 									<a href="#" class="btn">Смотреть</a>
-								</div>
+								</div> -->
 							</div>
 
 							<div class="info-sl__img-item img-item-r">
 								<img src="img/info-sl-2.jpg" alt="">
-								<p>CYBER MONDAY <span>до -80%</span></p>
+								<!-- <p>CYBER MONDAY <span>до -80%</span></p> -->
 							</div>
 
 						</div>
 
 					</div>
 				</div>
-			</section> -->
+			</section>
 
 			<section id="popular" class="popular">
 				<div class="_container">
