--- a/#src/catalog.html
+++ b/#src/catalog.html
@@ -37,6 +37,8 @@
 								<div class="page__sidebar-amount">23212 товаров</div>
 							</div>
 
+							<div class="loaderSize" id="categoryFilterLoader" style="display: none;">Загрузка...</div>
+
 							<div class="page__sidebar-navigation">
 								<div class="spollers-block" data-spollers data-one-spoller>
 
@@ -84,10 +86,47 @@
 										</ul>
 									</div>
 
-									<div class="page__sidebar-navigation-col">
+									<div class="page__sidebar-navigation-col page__sidebar-navigation-col-price">
 										<div class="page__sidebar-navigation-block-name d-flex">
 											<div class="page__sidebar-navigation-name">ЦЕНА</div>
 										</div>
+										<form class="page__sidebar-navigation-col-price-selects">
+											<div class="page__sidebar-navigation-col-price-selects-col">
+												<div class="page__sidebar-navigation-col-price-selects-text">от</div>
+												<input type="number" class="page__sidebar-navigation-col-price-selects-input" name="num" min="1"
+													max="1000000" value="1">
+												<div class="page__sidebar-navigation-col-price-selects-text">руб</div>
+											</div>
+											<div class="page__sidebar-navigation-col-price-selects-col">
+												<div class="page__sidebar-navigation-col-price-selects-text">до</div>
+												<input type="number" class="page__sidebar-navigation-col-price-selects-input" name="num" min="1"
+													max="1000000" value="2">
+												<div class="page__sidebar-navigation-col-price-selects-text">руб</div>
+											</div>
+										</form>
+										<form class="page__sidebar-navigation-col-price-switch d-flex">
+											<div class="page__sidebar-navigation-col-price-switch-col">
+												<div class="switch-block">
+													<input type="checkbox" id="price-switch-sale" class="switch-block__input" />
+													<label for="price-switch-sale" class="switch-block__label"></label>
+												</div>
+												<div class="page__sidebar-navigation-col-price-switch-name">Распродажа</div>
+											</div>
+											<div class="page__sidebar-navigation-col-price-switch-col">
+												<div class="switch-block">
+													<input type="checkbox" id="price-switch-exclusive" class="switch-block__input" />
+													<label for="price-switch-exclusive" class="switch-block__label"></label>
+												</div>
+												<div class="page__sidebar-navigation-col-price-switch-name">Эксклюзив</div>
+											</div>
+											<div class="page__sidebar-navigation-col-price-switch-col">
+												<div class="switch-block">
+													<input type="checkbox" id="price-switch-new" class="switch-block__input" />
+													<label for="price-switch-new" class="switch-block__label"></label>
+												</div>
+												<div class="page__sidebar-navigation-col-price-switch-name">Новинки</div>
+											</div>
+										</form>
 									</div>
 
 									<div class="page__sidebar-navigation-col">
@@ -118,7 +157,7 @@
 
 												<div class="page__sidebar-navigation-body-menu-options options">
 													<label class="page__sidebar-navigation-body-menu-options-item options__item">
-														<input class="page__sidebar-navigation-body-menu-options-item-input options__input" checked
+														<input class="page__sidebar-navigation-body-menu-options-item-input options__input"
 															type="radio" value="1" name="form[option]">
 														<span class="page__sidebar-navigation-body-menu-options-item-input-text options__text"><span
 																class="page__sidebar-navigation-body-menu-options-item-input-text-main options__text-main">Американский</span>274</span>
