--- a/light_market-new/index.html
+++ b/light_market-new/index.html
@@ -26,7 +26,7 @@
 	</div>
 </section>
 
-<header id="header-top" class="header-top">
+<header id="header-top" class="header-top header-top-index">
 	<div class="_container">
 		<div class="header-top__inner">
 			<div class="location-block d-flex">
