--- a/#src/index.html
+++ b/#src/index.html
@@ -6,7 +6,7 @@
 
 <body>
 	<div class="wrapper">
-		@@include('_header.html',{})
+		@@include('_header-index.html',{})
 		<main class="page">
 
 			<!-- @@include('_slider-index.html',{}) -->
