--- a/#src/index.html
+++ b/#src/index.html
@@ -20,13 +20,13 @@
 								<img src="img/sl-1.jpg" alt="">
 							</div>
 
-							<div class="slider__item">
+							<!-- <div class="slider__item">
 								<img src="img/sl-1.jpg" alt="">
 							</div>
 
-							<div class="slider__item filter">
+							<div class="slider__item">
 								<img src="img/sl-1.jpg" alt="">
-							</div>
+							</div> -->
 						</div>
 
 						<div class="info-sl__images d-flex">
