--- a/light_market-new/catalog.html
+++ b/light_market-new/catalog.html
@@ -20,9 +20,15 @@
 
 <body>
 	<div class="wrapper">
-		<section class="sale">
-	<a href="#" class="sale__descp">
-		ЛЕТНЯЯ РАСПРОДАЖА
+		<section class="sale ticker">
+	<a href="#" class="sale__link tickerInline">
+		<p class="sale__link-text">ЛЕТНЯЯ РАСПРОДАЖА</p>
+		<p class="sale__link-text">СКИДКИ ДО 85%</p>
+		<p class="sale__link-text">ЛЕТНЯЯ РАСПРОДАЖА</p>
+		<p class="sale__link-text">СКИДКИ ДО 85%</p>
+		<p class="sale__link-text">ЛЕТНЯЯ РАСПРОДАЖА</p>
+		<p class="sale__link-text">СКИДКИ ДО 85%</p>
+		<p class="sale__link-text">ЛЕТНЯЯ РАСПРОДАЖА</p>
 	</a>
 </section>
 
